--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -5,6 +5,10 @@
   | Contact Form
 {% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'contact/css/contact.css' %}">
+{% endblock %}
+
 
 {% block page_header %}
 <div class="container header-container">
@@ -19,21 +23,24 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6 text-center mt-3">
+        <div class="col-12 text-center mt-3">
             <h2 class="logo-font mt-5 mb-5 center"><i>Contact Us</i></h2>
-            <h3 >Add Product</h3>
+            <p class="text-muted">Please fill out the form below and we will reply as soon as possible. Thank You.</p>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-md-6">
-            <form method="POST" action="" class="form mb-2" enctype="multipart/form-data">
-               
-               <div class="text-right">
-                   <a class="btn btn-links" href="{% url 'products' %}">Cancel Upload</a>
-                   <button type="submit" class="btn btn-links">Upload</button>
-               </div>
+    <div class="form-container contact-container">
+        <div class="row">
+          <div class="col-12">
+            <form method="POST" action="{% url 'contact' %}">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <div class="text-right">
+              <a class="btn btn-links" href="{% url 'home' %}">Cancel</a>
+              <button type="submit" class="btn btn-links">Send</button>
+            </div>
             </form>
+          </div>
         </div>
     </div>
 </div>
