--- a/templates/base.html
+++ b/templates/base.html
@@ -146,12 +146,17 @@
       <div class="container-fluid footer-container">
         <div class="row">
           <div class="col-12 ">
+            <p>
             <a href="{% url 'blog_post_page' %}" class="dark-blue blog-link">Blog</a>
             {% if request.user.is_superuser %}
             <a href="{% url 'upload_blog' %}" class="dark-blue blog-link"> | Upload Blog</a>
             {% endif %}
+            </p>
+            <p>
+              <a href="{% url 'contact' %}" class="dark-blue blog-link">Contact Us</a>
+            </p>
           </div>
-          <div class="col-12 social p-2">
+          <div class="col-12 social p-1">
             <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square mr-1"
                 aria-hidden="true"></i></a>
             <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter-square mr-1"
