Add js to delete button on full_blog.html to get user to confirm delete

--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -46,3 +46,13 @@
     font-size: 1.25rem;
     font-family: 'Tenor Sans', serif;
 }
+
+.confirm {
+    background-color: #e71d36;
+    color: #011627;
+}
+
+.cancel {
+    background-color: #2EC4B6;
+    color: #011627;
+}
