--- a/blog/templates/blog/full_blog.html
+++ b/blog/templates/blog/full_blog.html
@@ -82,7 +82,7 @@
         </div>
         <div class="col-12">
             <p class="center">
-                <a href="{% url 'blog_post_page' %}" class="btn btn-links mt-3">Back to Blog</a>
+                <a href="{% url 'blog_post_page' %}" class="btn btn-links mt-3">Back to Blogs</a>
               </p>
         </div>
     </div>
@@ -93,5 +93,5 @@
 {% endblock %}
 
 {% block postloadjs %}
-    <script src="{% static 'blog/js/blog.js' %}"></script>
+    <script src="{% static 'blog/js/blog_full.js' %}"></script>
 {% endblock %}
