--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -23,7 +23,7 @@
     <h2 class="logo-font mt-5 mb-5 center blog-logo"><i>Blog</i></h2>
 </div>
 
-{% for blog in blogs %}
+{% for blog in blog_list %} <!--for blog in blogs-->
 <div class="container">
     <hr>
     <div class="row">
@@ -59,23 +59,25 @@
   </div>
 </div>
 {% endfor %}
+
+<!--Pagination-->
+<div class="col-12 center mt-5">
+{% if blog_list.has_previous %}
+  <a class="mr-2" href="?page=1">&laquo First Page</a>
+  <a class="mr-2" href="?page={{ blog_list.previous_page_number }}">Previous</a>
+{% endif %}
+
+<span class="ml-2 mr-2">Page {{ blog_list.number }} of {{ blog_list.paginator.num_pages }}</span>
+
+{% if blog_list.has_next %}
+  <a class="mr-2" href="?page={{ blog_list.next_page_number }}">Next Page</a>
+  <a href="?page={{ blog_list.paginator.num_pages }}">Last &raquo</a>
+{% endif %}
+</div>
+
 {% endblock %}
+
 
 {% block postloadjs %}
     <script src="{% static 'blog/js/blog.js' %}"></script>
 {% endblock %}
-
-
-
-
-
-<!--
-
-
-
-
-  <div>
-              <a class="edit btn mr-5" href="{% url 'edit_blog' blog.id %}">Edit</a>
-              <a class="delete btn" href="#">Delete</a>
-            </div>
--->
