--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -56,3 +56,29 @@
     background-color: #2EC4B6;
     color: #011627;
 }
+
+.pagination-links {
+    font-size: 1.25rem;
+    font-family: 'Tenor Sans', serif;
+    color: #2ec4b6;
+}
+
+.pagination-links-alt {
+    font-size: 1.25rem;
+    font-family: 'Tenor Sans', serif;
+    color: #e71d36;
+}
+
+.pagination-links:hover {
+    font-size: 1.25rem;
+    font-family: 'Tenor Sans', serif;
+    color: #011627;
+    text-decoration: none;
+}
+
+.pagination-links-alt:hover {
+    font-size: 1.25rem;
+    font-family: 'Tenor Sans', serif;
+    color: #011627;
+    text-decoration: none;
+}
