--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -63,15 +63,15 @@
 <!--Pagination-->
 <div class="col-12 center mt-5">
 {% if blog_list.has_previous %}
-  <a class="mr-2" href="?page=1">&laquo First Page</a>
-  <a class="mr-2" href="?page={{ blog_list.previous_page_number }}">Previous</a>
+  <a class="mr-2 pagination-links" href="?page=1">&laquo First Page</a>
+  <a class="mr-2 pagination-links-alt" href="?page={{ blog_list.previous_page_number }}">Previous</a>
 {% endif %}
 
 <span class="ml-2 mr-2">Page {{ blog_list.number }} of {{ blog_list.paginator.num_pages }}</span>
 
 {% if blog_list.has_next %}
-  <a class="mr-2" href="?page={{ blog_list.next_page_number }}">Next Page</a>
-  <a href="?page={{ blog_list.paginator.num_pages }}">Last &raquo</a>
+  <a class="pagination-links-alt mr-2" href="?page={{ blog_list.next_page_number }}">Next Page</a>
+  <a class="pagination-links" href="?page={{ blog_list.paginator.num_pages }}">Last &raquo</a>
 {% endif %}
 </div>
 
