Change delete <a> tag to a <button> tag on full blog to avoid getting a # in the url when using the confirm delete javascript

--- a/blog/templates/blog/full_blog.html
+++ b/blog/templates/blog/full_blog.html
@@ -36,7 +36,7 @@
     <div class="row">
         <div class="col-12 center mt-2 mb-2" id="options">
             <a class="edit btn mr-5" href="{% url 'edit_blog' blogs.id %}">Edit</a>
-            <a class="delete btn" href="#">Delete</a>
+            <button class="delete btn">Delete</button>
         </div>
         <div class="col-12 center mt-2 mb-2" id="show">
             <a class="cancel btn mr-5" href="{% url 'full_post' blogs.id %}">Cancel</a>
