--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -38,6 +38,9 @@
             <div class="text-right">
               <a class="btn btn-links" href="{% url 'home' %}">Cancel</a>
               <button type="submit" class="btn btn-links">Send</button>
+              {% if request.user.is_superuser %}
+              <a class="btn btn-links" href="{% url 'messages_list' %}">Customer Messages</a>
+              {% endif %}
             </div>
             </form>
           </div>
