--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,7 @@
                 {% if request.user.is_superuser %}
                   <a href="{% url 'add_product' %}" class="dropdown-item dark-color">Product Management</a>
                   <a href="{% url 'upload_blog' %}" class="dropdown-item dark-color blog-link">Upload Blog</a>
+                  <a class="dropdown-item dark-color" href="{% url 'messages_list' %}">Customer Messages</a>
                 {% endif %}
                   <a href="{% url 'profile' %}" class="dropdown-item dark-color">My Profile</a>
                   <a href="{% url 'account_logout' %}" class="dropdown-item dark-color">Logout</a>
