Ensure responsiveness of index.html by testing it using chrome developer tools

--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -25,6 +25,14 @@
     color:#011627;
 }
 
+.green {
+    color: #2ec4bc;
+}
+
+.red {
+    color: #e71d36;
+}
+
 .center {
     text-align: center;
 }
