--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -29,6 +29,7 @@
     <div class="row">
         
          <div class="col-4">
+             <p>Posted: <span class="text-muted">{{ blog.blog_created | timesince}} ago</span></p>
              <p>Posted By: <span class="text-muted">{{ blog.blog_author }}</span></p>
              <p>On: <span class="text-muted">{{ blog.blog_created }}</span></p>
              <p>Updated: <span class="text-muted">{{ blog.blog_updated }}</span></p>
