--- a/blog/templates/blog/full_blog.html
+++ b/blog/templates/blog/full_blog.html
@@ -26,7 +26,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 center">
-            <span class="dark-blue"><strong>Posted By: </strong><span class="text-muted">{{ blogs.blog_author }}  |  </span></span>
+             <span class="dark-blue"><strong>Posted By: </strong><span class="text-muted">{{ blogs.blog_author }}  |  </span></span>
              <span class="dark-blue"><strong>On: </strong><span class="text-muted">{{ blogs.blog_created }}  |  </span></span>
              <span class="dark-blue"><strong>Updated: </strong><span class="text-muted">{{ blogs.blog_updated }}</span></span>
         </div>
@@ -57,12 +57,13 @@
         </div>
         <div class="col-12">
             <p>{{ blogs.blog_main }}</p>
+          <p class="red mt-4"><strong>Posted: </strong><span class="dark-blue">{{ blogs.blog_created | timesince }} ago</span></p>
         </div>
 
 
 
         <!--Blog Comments-->
-       <div class="mt-5">
+       <!--<div class="mt-5">
             {% if user.is_authenticated %}
             <form method='POST' action="{% url 'full_post' blogs.id %}">
             <h3>Leave a Comment!</h3>
@@ -74,12 +75,12 @@
             </div>
             {% endif %}
             </form>
+        </div>-->
+        <div>
+            
         </div>
-        <div class="col-12">
-            {% for post in blog_comment.all %}
-              <p>{{ main_comment }}</p>
-            {% endfor %}
-        </div>
+
+
         <div class="col-12">
             <p class="center">
                 <a href="{% url 'blog_post_page' %}" class="btn btn-links mt-3">Back to Blogs</a>
