--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -98,7 +98,7 @@
 
                     <div class=" col-12">
                         <a href="{% url 'products' %}" class="btn orange  mt-5">
-                            <span class="text-uppercase btn orange btn-links">Back to shop</span>
+                            <span class="text-uppercase btn btn-links">Back to shop</span>
                         </a>
                         <input type="submit" class="btn btn-links text-uppercase mt-5" value="Add to Cart">
                     </div>
