--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mob-container">
   <div class="row">
       <div class="col text-center mt-0">
         <hr>
