--- a/blog/templates/blog/full_blog.html
+++ b/blog/templates/blog/full_blog.html
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-<div>
+<div class="pt-5">
     <h2 class="logo-font mt-5 mb-5 center blog-logo roboto blog-title"><i>{{ blogs.blog_title }}</i></h2>
 </div>
 
