--- a/blog/templates/blog/upload_blog.html
+++ b/blog/templates/blog/upload_blog.html
@@ -20,9 +20,9 @@
 
 {% block content %}
 <div>
-    <h2 class="logo-font mt-5 mb-5 center blog-logo"><i>Upload Blog</i></h2>
+    <h2 class="logo-font mt-5 mb-5 center blog-logo headings"><i>Upload Blog</i></h2>
 </div>
-<div class="form-container">
+<div class="form-container edit-form">
     <div class="row">
       <div class="col-12">
         <form method="POST" action="{% url 'upload_blog' %}" enctype="multipart/form-data">
