--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -24,7 +24,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center mt-3">
-            <h2 class="logo-font mt-5 mb-5 center"><i>Contact Us</i></h2>
+            <h2 class="logo-font mt-5 mb-5 center headings"><i>Contact Us</i></h2>
             <p class="text-muted">Please fill out the form below and we will reply as soon as possible. Thank You.</p>
         </div>
     </div>
