--- a/contact/templates/contact/message-list.html
+++ b/contact/templates/contact/message-list.html
@@ -24,7 +24,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center mt-3">
-            <h2 class="logo-font mt-5 mb-5 center"><i>Your Messages</i></h2>
+            <h2 class="logo-font mt-5 mb-5 center headings"><i>Your Messages</i></h2>
             <p class="text-muted">Here are your messages from customers</p>
         </div>
     </div>
