--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-md-6 text-center mt-3">
-            <h2 class="logo-font mt-5 mb-5 center"><i>Admin Product Management</i></h2>
+            <h2 class="logo-font mt-5 mb-5 center headings"><i>Admin Product Management</i></h2>
             <h3 >Edit Product</h3>
         </div>
     </div>
