--- a/static/css/base.css
+++ b/static/css/base.css
@@ -677,8 +677,8 @@ body {
 }
 
 @media (max-width: 990px) {
-.mob-container {
-    margin-top: 3rem;
+  .mob-container {
+      margin-top: 3rem;
   }
 
   .headings {
@@ -695,6 +695,11 @@ body {
 
   .edit-form {
     width: 100%;
+}
+
+.blog-container {
+    display: flex;
+    flex-direction: column;
 }
 }
 
