--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col text-center mt-3">
             <hr>
-            <h2 class="logo-font mt-5 mb-5 center"><i>Checkout</i></h2>
+            <h2 class="logo-font mt-5 mb-5 center headings"><i>Checkout</i></h2>
         </div>
     </div>
 
