--- a/contact/templates/contact/message-list.html
+++ b/contact/templates/contact/message-list.html
@@ -32,7 +32,7 @@
     <div class="messages-container mt-5 p-2">
     <p class="text-muted">{{ m.contact_sent }}</p>
     <h4><span class="detail">SENDER: </span>{{ m.contact_name }}</h4>
-    <h5><span class="detail">EMAIL: </span>{{ m.contact_email }}</h5>
+    <h5 id="email-mob"><span class="detail">EMAIL: </span>{{ m.contact_email }}</h5>
     <p>{{ m.contact_body }}</p>
     <a class="btn btn-links" href="{% url 'delete_message' m.id %}">Delete</a>
     </div>
