Ensure responsiveness of login/registration allauth templates and test using chrome developer tools

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -637,6 +637,20 @@ body {
   } 
 
   @media (max-width: 600px) {
+    .form-image {
+        background-image: none;
+        
+    }
+ 
+    .form-container {
+        width: 100%;
+    }
+    
+    .form-image-reg {
+        background-image: none;
+        
+    }
+
     .cart-name-mob {
         display: none;
     }
