--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -15,7 +15,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit btn btn-links form-element">{% trans "Sign Up" %} &raquo;</button>
+  <button class="btn btn-links" type="submit form-element">{% trans "Sign Up" %} &raquo;</button>
 </form>
 </div>
 </div>
