--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="inactive ">
-<h1 class="login-head center form-element pt-5 mt-5">{% trans "Sign Out" %}</h1>
+<div class="form-element center margin-top">
+<h1 class="login-head center form-element">{% trans "Sign Out" %}</h1>
 
 <p class="form-element center">{% trans 'Are you sure you want to sign out?' %}</p>
 
