--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,8 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+<div class="form-element center margin-top">
+    <h1 class="headings">{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+</div>
 {% endblock %}
