--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
         <div class="row">
             <!--Mobile screen hero image and heading-->
             <div class="col-sm-12 d-md-none">
-                <img class="hero-mob pt-0 pb-0" src='./media/ms-4-hero-3.jpg' alt="Inner shop hero 1">
+                <img class="hero-mob pt-0 pb-0" src='{{ MEDIA_URL }}ms-4-hero-3.jpg' alt="Inner shop hero 1">
                 <h2 class="mob-logo pt-1 center">sound store</h2>
             </div>
             <!-- Hero Image Carousel for md and above screens -->
@@ -28,13 +28,13 @@
                 <div id="carousel" class="carousel slide w-100" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block hero" src='./media/ms-4-hero-2.jpg' alt="Inner shop hero 1">
+                            <img class="d-block hero" src='{{ MEDIA_URL }}ms-4-hero-2.jpg' alt="Inner shop hero 1">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block hero " src="./media/ms-4-hero-3.jpg" alt="Inner shop hero 2">
+                            <img class="d-block hero " src="{{ MEDIA_URL }}ms-4-hero-3.jpg" alt="Inner shop hero 2">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block hero " src="./media/ms-4-hero.jpg" alt="Inner shop hero 3">
+                            <img class="d-block hero " src="{{ MEDIA_URL }}ms-4-hero.jpg" alt="Inner shop hero 3">
                         </div>
                     </div>
                 </div>
@@ -50,37 +50,37 @@
       <div class="row d-flex flex-row w-100 category-container">
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
           <a href="{% url 'products' %}?category=drum_sets,shell_sets,cymbals">
-            <img class="category-images " src="./media/drums-category.jpg" alt="Drum Set Category">
+            <img class="category-images " src="{{ MEDIA_URL }}drums-category.jpg" alt="Drum Set Category">
             <p class="descriptor p-2">Drums</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
           <a href="{% url 'products' %}?category=electric_guitar,acoustic_guitar">
-            <img class="category-images" src="./media/guitar100.jpg" alt="Guitar Category">
+            <img class="category-images" src="{{ MEDIA_URL }}guitar100.jpg" alt="Guitar Category">
             <p class="descriptor p-2">Guitars</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
           <a href="{% url 'products' %}?category=electric_bass,acoustic_bass">
-            <img class="category-images" src="./media/bass-category.jpg" alt="Bass Guitar Category">
+            <img class="category-images" src="{{ MEDIA_URL }}bass-category.jpg" alt="Bass Guitar Category">
             <p class="descriptor p-2">Bass</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4  p-2 category category-mob">
           <a href="{% url 'products' %}?category=violin,viola">
-            <img class="category-images" src="./media/viola.jpg" alt="String Instruments Category">
+            <img class="category-images" src="{{ MEDIA_URL }}viola.jpg" alt="String Instruments Category">
             <p class="descriptor p-2">Strings</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
           <a href="{% url 'products' %}?category=trumpet,saxophone,trombone">
-            <img class="category-images" src="./media/trumpet.jpg" alt="Brass Category">
+            <img class="category-images" src="{{ MEDIA_URL }}trumpet.jpg" alt="Brass Category">
             <p class="descriptor p-2">Brass</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4  p-2 category category-mob">
           <a href="{% url 'products' %}?category=microphones,hardware,strings_straps">
-            <img class="category-images" src="./media/accessories.jpg" alt="Accessories Category">
+            <img class="category-images" src="{{ MEDIA_URL }}accessories.jpg" alt="Accessories Category">
             <p class="descriptor p-2">Accessories</p>
           </a>
         </div>
