Update image paths for allauth images

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -40,7 +40,7 @@
              {% endif %}
          </div>
          <div class="col-xs-12 col-sm-8">
-             <h4 class="blog-title" id="mob-blog-title">{{ blog.blog_title }}</h4>
+             <h4 class="blog-title headings" id="mob-blog-title">{{ blog.blog_title }}</h4>
              {% if blog.blog_image %}
                 <img src="{{ blog.blog_image_url }}" alt="{{ blog.blog_title }}" class="blog-image">
             {% else %}
