--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -38,7 +38,7 @@
                 {% endfor %}
                <div class="text-right">
                    <a class="btn" href="{% url 'products' %}">Cancel Upload</a>
-                   <button type="submit" class="btn btn-links">Upload</button>
+                   <button type="submit" class="btn btn-links">Edit</button>
                </div>
             </form>
         </div>
