--- a/templates/404.html
+++ b/templates/404.html
@@ -8,32 +8,21 @@
 {% endblock %}
 
 {% block content %}
-This page either does not exist or is missing.
-<section>
-    <div class="container-fluid ">
+
+<section class="">
+    <hr>
+    <div class="container">
         <div class="row">
-            <!--Mobile screen hero image and heading-->
-            <div class="col-sm-12 d-md-none">
-                <img class="hero-mob pt-0 pb-0" src='{{ MEDIA_URL }}ms-4-hero-3.jpg' alt="Inner shop hero 1">
-                <h2 class="mob-logo pt-1 center">sound store</h2>
-            </div>
-            <!-- Hero Image Carousel for md and above screens -->
-            <div class="d-none d-md-block col-md-12 pt-5">
-                <div id="carousel" class="carousel slide w-100" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block hero" src='{{ MEDIA_URL }}ms-4-hero-2.jpg' alt="Inner shop hero 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block hero " src="{{ MEDIA_URL }}ms-4-hero-3.jpg" alt="Inner shop hero 2">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block hero " src="{{ MEDIA_URL }}ms-4-hero.jpg" alt="Inner shop hero 3">
-                        </div>
-                    </div>
-                </div>
-            </div>
+          <div class="col-12">
+            <h2 class="center headings mt-3"><strong><i>This page either does not exist or is missing...</i></strong></h2>
+            <p class="mt-3"><a class="cat-products" href="{% url 'products' %}">Back to store</a></p>
+          </div>
+          <div class="col-8 offset-2 error-image">
+            <a href="{% url 'products' %}"><img src="{{MEDIA_URL}}ms4-login.jpeg" alt="Store Image"></a>
+          </div>
         </div>
+    </div>
+
     </div>
 </section>
 
