Fix issue with styling of 404 image

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -566,8 +566,8 @@ body {
 /* -------------------------------- Error Handling */
 
 .error-image {
-    height: 400px;
-    width: 100%;
+    height: 500px;
+    width: 500px;
 }
 
 /* -------------------------------- Media Queries */
