--- a/templates/400.html
+++ b/templates/400.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block extra_title %}
-  | Page not found
+  | 400
 {% endblock %}
 
 {% block page_header %}
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="center headings mt-3"><strong><i>This page either does not exist or is missing...</i></strong></h2>
+            <h2 class="center headings mt-3"><strong><i>400 error (Bad Request). Cannot load webpage...</i></strong></h2>
             <p class="mt-3"><a class="cat-products" href="{% url 'products' %}">Back to store</a></p>
           </div>
           <div class="col-12 error-image">
