Fix error in css for error handling pages

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -565,8 +565,8 @@ body {
 
 /* -------------------------------- Erro Handling */
 
-.error-handling {
-    padding-top: 300px;
+.error-container {
+    padding-top: 500px;
 }
 
 /* -------------------------------- Media Queries */
