--- a/templates/400.html
+++ b/templates/400.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <section>
-    <div class="container error-container">
+    <div class="container error-container mt-5">
         <hr>
         <div class="row">
           <div class="col-12">
