--- a/templates/403.html
+++ b/templates/403.html
@@ -14,8 +14,8 @@
         <hr>
         <div class="row">
           <div class="col-12">
-            <h2 class="center headings mt-3"><strong><i>403 Forbidden – you don’t have permission to access this resource</i></strong></h2>
-            <p class="mt-3"><a class="cat-products center" href="{% url 'products' %}">Back to store</a></p>
+            <h2 class="center headings mt-3 green"><strong><i>403 Forbidden – you don’t have permission to access this resource</i></strong></h2>
+            <p class="mt-3"><a class="cat-products center orange" href="{% url 'products' %}">Back to store</a></p>
           </div>
         </div>
     </div>
