--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -37,7 +37,7 @@
                   {% endif %}
                 {% endfor %}
                <div class="text-right">
-                   <a class="btn" href="{% url 'products' %}">Cancel Upload</a>
+                   <a class="btn btn-links" href="{% url 'products' %}">Cancel Upload</a>
                    <button type="submit" class="btn btn-links">Edit</button>
                </div>
             </form>
